# learn_pygame

./: .gitignore  flake.nix  map.json  pyproject.toml
editor/: pyproject.toml
editor/src/: main.py
game/: pyproject.toml
game/src/: main.py
src/: editor.py  main.py
src/learn_pygame/: animations.py  assets.py  clouds.py  editor.py  entities.py  main.py  tilemap.py  utils.py
